--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-sans": "^0.2.2",
+    "@expo-google-fonts/dm-serif-display": "^0.2.2",
     "expo": "~45.0.0",
+    "expo-linear-gradient": "^11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components-react-native": "^5.1.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
